--- a/config/lab-springcloud-word.yml
+++ b/config/lab-springcloud-word.yml
@@ -1,5 +1,5 @@
 ---
-eureka:
+eureka1:
   client:
     serviceUrl:
       defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
